# formulate1

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py
src/formulate/: grammer.py  interpreter.py  test.py
tests/: test_package.py
