[metadata]
name = formulate
description = A faster and better version of scikit-hep/formulate
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdvaitDhingra/formulate1
author = Advait Dhingra
author_email = advait.dhingra1006@gmail.com
maintainer = Advait Dhingra and Jim Pivarski
maintainer_email = advait.dhingra1006@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://formulate.readthedocs.io/
    Bug Tracker = https://github.com/AdvaitDhingra/formulate1/issues
    Discussions = https://github.com/AdvaitDhingra/formulate1/discussions
    Changelog = https://github.com/AdvaitDhingra/formulate1/releases

[options]
packages = find:
install_requires =
    numpy>=1.13.3
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx_copybutton
test =
    pytest>=6

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
